--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <!--link para o jquery-->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <!-- links para o css -->
-    <link rel="stylesheet" href="Styles/background.css">
-    <link rel="stylesheet" href="Styles/grid.css">
+    <link rel="stylesheet" href="View/Styles/background.css">
+    <link rel="stylesheet" href="View/Styles/grid.css">
     <!-- links para fontes externas -->
     
     <!-- Configurações globais-->
@@ -19,6 +19,6 @@
     </div>
 </body>
     <!-- links para os controladores-->
-    <script src="../Controler/main.js"></script>
+    <script src="Controler/main.js"></script>
     <!-- links para os scripts de frontend -->
 </html>
