--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 <body>
     <button id="add_predio">ADICIONAR PRÉDIO</button>
     <div id="predios"></div>
+    <button id="calcular">CALCULAR</button>
 </body>
     <!-- links para os controladores-->
     <script src="Controler/andares.js"></script>
     <script src="Controler/predios.js"></script>
+
+    <script src="Controler/main.js"></script>
     <!-- links para os scripts de frontend -->
      <!-- <script type="module" src="../Model/Calculators/horizontal_mesh.js"></script> -->
      <script type="module" src="/Model/Calculators/ativos.js"></script>
