--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <title>Calculadora</title>
 </head>
 <body>
-    <button id="add_predio">ADICIONAR PRÉDIO</button>
+    <button id="add_predio" class="entrada">ADICIONAR PRÉDIO</button>
+    <button id="calcular" class="entrada">CALCULAR</button>
     <div id="predios"></div>
-    <button id="calcular">CALCULAR</button>
 </body>
     <!-- links para os controladores-->
     <script src="Controler/andares.js"></script>
