--- a/index.html
+++ b/index.html
@@ -14,18 +14,15 @@
     <title>Calculadora</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <button id="add_predio">ADICIONAR PRÉDIO</button>
-    <button id="calcular">CALCULAR</button>
-=======
     <button id="add_predio" class="entrada">ADICIONAR PRÉDIO</button>
     <button id="calcular" class="entrada">CALCULAR</button>
->>>>>>> b6c9a06b8cdd34a59996e53de015ea6a45dd8744
     <div id="predios"></div>
 </body>
     <!-- links para os controladores-->
     <script src="Controler/andares.js"></script>
     <script src="Controler/predios.js"></script>
+    <script src="Model/calcular.js"></script>
+
 
     <script src="Controler/main.js"></script>
     <!-- links para os scripts de frontend -->
