--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <title>Calculadora</title>
 </head>
 <body>
+    <input type="number" id="vel_back_ext" placeholder="Velocidade entre os predios">
+    <input type="number" id="vel_back_int" placeholder="Velocidade interna dos predios">
     <button id="add_predio" class="entrada">ADICIONAR PRÉDIO</button>
     <button id="calcular" class="entrada">CALCULAR</button>
     <div id="predios"></div>
