--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     </header>
     </header>
     <div id="divInputs">
-    <input type="number" id="vel_back_ext" placeholder="Velocidade entre os predios">
-    <input type="number" id="vel_back_int" placeholder="Velocidade interna dos predios">
-    <button id="add_predio" class="entrada">ADICIONAR PRÉDIO</button>
-    <button id="calcular" class="entrada">CALCULAR</button>
-</div>
+        <input type="number" id="vel_back_ext" placeholder="Velocidade entre os predios">
+        <input type="number" id="vel_back_int" placeholder="Velocidade interna dos predios">
+        <button id="add_predio" class="entrada">ADICIONAR PRÉDIO</button>
+        <button id="calcular" class="entrada">CALCULAR</button>
+    </div>
     <div id="predios"></div>
 </body>
     <!-- links para os controladores-->
@@ -37,7 +37,7 @@
     <script src="Controler/main.js"></script>
     <!-- links para os scripts de frontend -->
      <!-- <script type="module" src="../Model/Calculators/horizontal_mesh.js"></script> -->
-     <script type="module" src="/Model/Calculators/ativos.js"></script>
      <script type="module" src="/Model/Calculators/lvl1_backbone.js"></script>
      <script type="module" src="/Model/Calculators/lvl2_backbone.js"></script>
+     <script src="Model/Calculators/malha_horizontal.js"></script>
 </html> 
