--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <button id="calcular" class="entrada">CALCULAR</button>
     </div>
     <div id="predios"></div>
+    <div id="tabelas"></div>
     <footer id="main-footer">
         <p>&copy; <span id="current-year"></span> CEFET. Todos os direitos reservados.</p>
         <p>Redes de computadores 3°ano.</p>
@@ -37,15 +38,16 @@
         
 </body>
     <!-- links para os controladores-->
-    <script src="Controler/andares.js"></script>
-    <script src="Controler/predios.js"></script>
-    <script src="Model/calcular.js"></script>
+    <script type="module"src="Controler/andares.js"></script>
+    <script type="module" src="Controler/predios.js"></script>
+    <script type="module" src="Model/calcular.js"></script>
+    <script type="module" src="Controler/TabelaMH.js"></script>
 
 
-    <script src="Controler/main.js"></script>
+    <script type="module" src="Controler/main.js"></script>
     <!-- links para os scripts de frontend -->
      <!-- <script type="module" src="../Model/Calculators/horizontal_mesh.js"></script> -->
      <script type="module" src="/Model/Calculators/lvl1_backbone.js"></script>
      <script type="module" src="/Model/Calculators/lvl2_backbone.js"></script>
-     <script src="Model/Calculators/malha_horizontal.js"></script>
+     <script type="module" src="Model/Calculators/malha_horizontal.js"></script>
 </html> 
