--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         
 </body>
     <!-- links para os controladores-->
-    <script type="module"src="Controler/andares.js"></script>
-    <script type="module" src="Controler/predios.js"></script>
-    <script type="module" src="Model/calcular.js"></script>
-    <script type="module" src="Controler/TabelaMH.js"></script>
+    <script src="Controler/andares.js"></script>
+    <script src="Controler/predios.js"></script>
+    <script src="Model/calcular.js"></script>
+    <script src="Controler/TabelaMH.js"></script>
 
 
-    <script type="module" src="Controler/main.js"></script>
+    <script src="Controler/main.js"></script>
     <!-- links para os scripts de frontend -->
      <!-- <script type="module" src="../Model/Calculators/horizontal_mesh.js"></script> -->
      <script type="module" src="/Model/Calculators/lvl1_backbone.js"></script>
