--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script src="Controler/andares.js"></script>
     <script src="Controler/predios.js"></script>
     <script src="Model/calcular.js"></script>
-    <script src="Controler/TabelaMH.js"></script>
+    <!-- <script src="Controler/TabelaMH.js"></script; -->
 
 
     <script src="Controler/main.js"></script>
