--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
         </header>
         <div id="divInputs">
+            <input type="number" id="dist_media_malha_horizontal" placeholder="Diatância média da malha horizontal">
             <input
                 type="number"
                 id="vel_back_ext"
@@ -59,6 +60,9 @@
     <!-- links para os controladores-->
     <script src="Controler/andares.js"></script>
     <script src="Controler/predios.js"></script>
+    <script src="Model/Calculators/lvl1_backbone.js"></script>
+    <script src="Model/Calculators/lvl2_backbone.js"></script>
+    <script src="Model/Calculators/malha_horizontal.js"></script>
     <script src="Model/calcular.js"></script>
     <!-- <script src="Controler/TabelaMH.js"></script; -->
 
