--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
     <script src="Model/Calculators/lvl1_backbone.js"></script>
     <script src="Model/Calculators/lvl2_backbone.js"></script>
     <script src="Model/Calculators/malha_horizontal.js"></script>
+    <script src="Model/Calculators/miscelanea.js"></script>
+    <script src="Model/Calculators/total_backbone.js"></script>
     <script src="Model/calcular.js"></script>
 
     <script src="Controler/main.js"></script>
