--- a/index.html
+++ b/index.html
@@ -58,14 +58,15 @@
         </script>
     </body>
     <!-- links para os controladores-->
-    <script src="Controler/andares.js"></script>
-    <script src="Controler/predios.js"></script>
     <script src="Model/Calculators/lvl1_backbone.js"></script>
     <script src="Model/Calculators/lvl2_backbone.js"></script>
     <script src="Model/Calculators/malha_horizontal.js"></script>
     <script src="Model/Calculators/miscelanea.js"></script>
     <script src="Model/Calculators/total_backbone.js"></script>
     <script src="Model/calcular.js"></script>
+    <script src="Controler/andares.js"></script>
+    <script src="Controler/predios.js"></script>
+    <script src="Controler/tabelas.js"></script>
 
     <script src="Controler/main.js"></script>
     <!-- links para os scripts de frontend -->
