--- a/index.html
+++ b/index.html
@@ -37,6 +37,52 @@
         <button id="add_predio" class="entrada">ADICIONAR PRÉDIO</button>
         <button id="calcular" class="entrada">CALCULAR</button>
     </div>
+    <div id="tec_backbone">
+        <div class="tecnologia_pre_definida" id="tec_back_int">
+            <h3>Transciever do backbone interno</h3>
+            <select class="transmissao">
+                <option value="N/A">NENHUMA</option>
+                <option value="1000Base-SX">1000Base-SX</option>
+                <option value="1000Base-LX">1000Base-LX</option>
+                <option value="10GBase-LR">10GBase-LR</option>
+                <option value="10GBase-ER">10GBase-ER</option>
+                <option value="10GBase-SR">10GBase-SR</option>
+            </select>
+            <h3>Fibra óptica do backbone interno</h3>
+            <select class="fibra">
+                <option value="N/A">NENHUMA</option>
+                <option value="62,5x125">OM1</option>
+                <option value="50x125">OM2</option>
+                <option value="50x125">OM3</option>
+                <option value="50x125">OM4</option>
+                <option value="50x125">OM5</option>
+                <option value="9x125">OS1</option>
+                <option value="9x125">OS2</option>
+            </select>
+        </div>
+        <div class="tecnologia_pre_definida" id="tec_back_ext">
+            <h3>Transciever do backbone externo</h3>
+            <select class="transmissao">
+                <option value="N/A">NENHUMA</option>
+                <option value="1000Base-SX">1000Base-SX</option>
+                <option value="1000Base-LX">1000Base-LX</option>
+                <option value="10GBase-LR">10GBase-LR</option>
+                <option value="10GBase-ER">10GBase-ER</option>
+                <option value="10GBase-SR">10GBase-SR</option>
+            </select>
+            <h3>Fibra óptica do backbone externo</h3>
+            <select class="fibra">
+                <option value="N/A">NENHUMA</option>
+                <option value="62,5x125">OM1</option>
+                <option value="50x125">OM2</option>
+                <option value="50x125">OM3</option>
+                <option value="50x125">OM4</option>
+                <option value="50x125">OM5</option>
+                <option value="9x125">OS1</option>
+                <option value="9x125">OS2</option>
+            </select>
+        </div>
+    </div>
     <div id="predios"></div>
     <div id="tabelas"></div>
     <footer id="main-footer">
